# iridium_weatherstation

./: .gitignore  Cargo.toml  iridium_weatherstation_config.json  process_and_plot_data.py
src/: config.rs  configuration.rs  data_parser.rs  error.rs  main.rs  process_data.rs  server.rs  station_util.rs
