[package]
name = "iridium_weatherstation"
version = "0.1.0"
authors = ["Willi Kappler, grandor@gmx.de"]

[lib]
name = "station_util"
path = "src/station_util.rs"

[dependencies]
time = "0.1"
log = "0.3"
simplelog = "0.4"
clap = "2.26"
quick-error = "1.2"
regex = "0.2"
chrono = "0.4"
# half = "0.1.0"
byteorder = "1.1"
mysql = "12.0.3"
# nom = "3.2"
