[package]
name = "iridium_weatherstation"
version = "0.2.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
edition = "2018"

[lib]
name = "station_util"
path = "src/station_util.rs"

[dependencies]
time = "0.1"
log = "0.4"
log4rs = "0.13"
clap = "2.26"
regex = "1.3"
chrono = "0.4"
byteorder = "1.3"
mysql = "19.0"

[profile.release]
lto = true
