[package]
name = "iridium_weatherstation"
version = "0.3.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
edition = "2021"

[dependencies]
time = "0.3"
log = "0.4"
simplelog = "0.11.2"
clap = "3.1"
regex = "1.5"
chrono = "0.4"
byteorder = "1.4"
serde = "1"
serde_derive = "1"
serde_json = "1"

[profile.release]
lto = true
